--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.example.footballbettingapp.FootballBettingAppApplication</mainClass>
+                    <mainClass>com.bolszowka.footballbettingapp.FootballBettingAppApplication</mainClass>
                 </configuration>
                 <executions>
                     <execution>
