--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,3 +19,7 @@ services:
       - POSTGRES_PASSWORD=password
       - POSTGRES_USER=postgres
       - POSTGRES_DB=postgres
+    volumes:
+      - db-data:/var/lib/postgresql/data
+volumes:
+  db-data:
